Add 3 design variation mockups with Showboat demo page (#9)

--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
       <button id="back-btn" class="hidden" type="button" aria-label="Back">&#8592;</button>
       <h1>Voice Notes</h1>
     </div>
-    <p id="app-version">v22</p>
+    <p id="app-version">v23</p>
+    <div id="theme-picker">
+      <button type="button" class="theme-swatch active" data-theme-value="" aria-label="Midnight theme" style="background:#e94560"></button>
+      <button type="button" class="theme-swatch" data-theme-value="aurora" aria-label="Aurora theme" style="background:linear-gradient(135deg,#f4845f,#f9c74f)"></button>
+      <button type="button" class="theme-swatch" data-theme-value="frost" aria-label="Frost theme" style="background:#2563eb"></button>
+      <button type="button" class="theme-swatch" data-theme-value="neon" aria-label="Neon theme" style="background:#00e5ff"></button>
+    </div>
   </header>
 
   <!-- Lists View -->
